--- a/app/views/main.html
+++ b/app/views/main.html
@@ -60,21 +60,22 @@
 
     <nav>
         <ul class="pagination">
-            <li class="disabled"><a href="#" aria-label="Previous"><span aria-hidden="true">«</span></a></li>
-            <li class="active"><a href="#">1 <span class="sr-only">(current)</span></a></li>
-            <li><a href="#">2</a></li>
-            <li><a href="#">3</a></li>
-            <li><a href="#">4</a></li>
-            <li><a href="#">5</a></li>
-            <li><a href="#" aria-label="Next"><span aria-hidden="true">»</span></a></li>
-        </ul>
-    </nav>
 
-    <nav>
-        <ul class="pagination">
-        <% for(var i = paginationObj.from; i < paginationObj.to; i++) { %>
-        <li class="<% if (i === paginationObj.currentPage) { %><%= 'active' %><% } %>"><a href='/page/<%= i %>'>
+            <% if (paginationObj.prevPage === 0) { %>
+            <li class="disabled"><span aria-hidden="true">«</span></li>
+            <% } else{ %>
+            <li><a href="/page/<%= paginationObj.prevPage %>" aria-label="Previous"><span aria-hidden="true">«</span></a></li>
+            <% } %>
+
+            <% for(var i = paginationObj.from; i <= paginationObj.to; i++) { %>
+            <li class="<% if (i === paginationObj.currentPage) { %><%= 'active' %><% } %>"><a href='/page/<%= i %>'>
             <%= i %></a></li><% } %>
+
+            <% if (paginationObj.nextPage === 0) { %>
+            <li class="disabled"><span aria-hidden="true">»</span></li>
+            <% } else{ %>
+            <li><a href="/page/<%= paginationObj.nextPage %>" aria-label="Next"><span aria-hidden="true">»</span></a></li>
+            <% } %>
         </ul>
     </nav>
 
