--- a/app/views/view_post.html
+++ b/app/views/view_post.html
@@ -23,7 +23,7 @@
             </p>
             <hr>
             <!-- Date/Time -->
-            <p><span class="glyphicon glyphicon-time"></span> Posted on August 24, 2013 at 9:00 PM</p>
+            <p><span class="glyphicon glyphicon-time"></span> Posted on <%= date %></p>
             <hr>
             <!-- Preview Image -->
             <img class="img-responsive" src="http://placehold.it/900x300" alt="">
