--- a/app/views/view_post.html
+++ b/app/views/view_post.html
@@ -18,21 +18,12 @@
         <!-- Blog Entries Column -->
         <div class="col-lg-8">
             <h1><%= title %></h1>
-            <p class="lead">
-                by <a href="#">MoaF</a>
-            </p>
+            <p class="lead">by <a href="#"><%= author %></a></p>
             <hr>
-            <!-- Date/Time -->
             <p><span class="glyphicon glyphicon-time"></span> Posted on August 24, 2013 at 9:00 PM</p>
             <hr>
-            <!-- Preview Image -->
-            <img class="img-responsive" src="http://placehold.it/900x300" alt="">
-            <hr>
-            <!-- Post Content -->
             <%- content %>
             <hr>
-            <!-- Blog Comments -->
-            <!-- Comments Form -->
             <div class="well">
                 <h4>Leave a Comment:</h4>
                 <form role="form">
