--- a/app/views/main.html
+++ b/app/views/main.html
@@ -26,7 +26,7 @@
             </h1>
 
             <% posts.forEach(function(post){ %>
-            <h2><a href="#"><%= post.title %> <%= post.post_id %> </a></h2>
+            <h2><a href="#"><%= post.title %></a></h2>
             <p class="lead">by <a href="index.php"><%= post.author_name %></a></p>
             <hr>
             <p><span class="glyphicon glyphicon-time"></span> Posted on <%= post.date %></p>
