--- a/app/views/includes/categories.html
+++ b/app/views/includes/categories.html
@@ -1,33 +1,34 @@
+<% if (categories.firstPart.length !==0 || categories.secondPart.length !== 0) { %>
 <!-- Blog Categories Well -->
 <div class="well">
     <h4>Blog Categories</h4>
     <div class="row">
         <div class="col-lg-6">
             <ul class="list-unstyled">
+                <% categories.firstPart.forEach(function(category){ %>
+                <li><a href="#"><%= category.category_name %></a></li>
+                <% }) %>
+
+                <!--<li><a href="#">Category Name</a></li>
                 <li><a href="#">Category Name</a>
                 </li>
                 <li><a href="#">Category Name</a>
                 </li>
                 <li><a href="#">Category Name</a>
-                </li>
-                <li><a href="#">Category Name</a>
-                </li>
+                </li>-->
             </ul>
         </div>
         <!-- /.col-lg-6 -->
         <div class="col-lg-6">
             <ul class="list-unstyled">
-                <li><a href="#">Category Name</a>
-                </li>
-                <li><a href="#">Category Name</a>
-                </li>
-                <li><a href="#">Category Name</a>
-                </li>
-                <li><a href="#">Category Name</a>
-                </li>
+                <% categories.secondPart.forEach(function(category){ %>
+                <li><a href="#"><%= category.category_name %></a></li>
+                <% }) %>
             </ul>
         </div>
         <!-- /.col-lg-6 -->
     </div>
     <!-- /.row -->
 </div>
+
+<% } %>
