Refactored 404 & view_category pages.

--- a/app/views/includes/categories.html
+++ b/app/views/includes/categories.html
@@ -1,4 +1,4 @@
-<% if (categoriesSidebar.firstPart.length !==0 || categoriesSidebar.secondPart.length !== 0) { %>
+<% if (typeof categoriesSidebar !== 'undefined' && (categoriesSidebar.firstPart.length !==0 || categoriesSidebar.secondPart.length !== 0)) { %>
 <!-- Blog Categories Well -->
 <div class="well">
     <h4>Blog Categories</h4>
