--- a/app/views/main.html
+++ b/app/views/main.html
@@ -7,8 +7,11 @@
     <meta name="description" content="">
     <meta name="author" content="">
     <title>Blog Home - Start Bootstrap Template</title>
-    <link href="../node_modules/bootstrap/dist/css/bootstrap.css" rel="stylesheet">
+    <!--<link href="../node_modules/bootstrap/dist/css/bootstrap.css" rel="stylesheet">-->
+    <link href="/node_modules/bootstrap/dist/css/bootstrap.css" rel="stylesheet">
+    <!--<link href="/public/css/blog-home.css" rel="stylesheet">-->
     <link href="/public/css/blog-home.css" rel="stylesheet">
+
 </head>
 <body>
 <% include includes/nav.html %>
@@ -78,6 +81,6 @@
 </div>
 <!-- /.container -->
 <script src="/node_modules/jquery/dist/jquery.js"></script>
-<script src="../../node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+<script src="/node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
 </body>
 </html>
