--- a/app/views/includes/categories.html
+++ b/app/views/includes/categories.html
@@ -6,7 +6,7 @@
         <div class="col-lg-6">
             <ul class="list-unstyled">
                 <% categoriesSidebar.firstPart.forEach(function(category){ %>
-                <li><a href="#"><%= category.category_name %></a></li>
+                <li><a href="/view_category/<%= category.category_name %>"><%= category.category_name %></a></li>
                 <% }) %>
             </ul>
         </div>
