--- a/app/views/page_404.html
+++ b/app/views/page_404.html
@@ -31,6 +31,6 @@
 </div>
 <!-- /.container -->
 <script src="/node_modules/jquery/dist/jquery.js"></script>
-<script src="../../node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+<script src="/node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
 </body>
 </html>
