--- a/app/views/includes/comments.html
+++ b/app/views/includes/comments.html
@@ -1,7 +1,7 @@
 <% if (postComments.length > 0) { %>
 <% postComments.forEach(function(comment){ %>
 <div class="media">
-    <a class="pull-left" href="#">
+    <a class="pull-left">
         <img class="media-object" height="64px" src="<%= comment.avatar_url %>" alt="">
     </a>
     <div class="media-body">
