--- a/app/views/admin/posts.html
+++ b/app/views/admin/posts.html
@@ -38,6 +38,9 @@
                     <h3 class="panel-title">Statistic</h3>
                 </div>
                 <div class="panel-body">
+
+                    <button class="btn btn-primary">Add Post</button>
+
                     <table class="table table-striped">
                         <thead>
                         <tr>
@@ -47,6 +50,7 @@
                             <th>Categories</th>
                             <th>Comments counter</th>
                             <th>Date</th>
+                            <th>Action</th>
                         </tr>
                         </thead>
                         <% posts.forEach(function(post){ %>
@@ -65,6 +69,11 @@
                             <% } %>
                             <td><%= post.comments_counter %></td>
                             <td><%= post.date %></td>
+                            <td>
+                                <a onClick="test('<%= post.post_id %>')" class="btn btn-warning btn-xs"><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span></a>
+                                <a href="" class="btn btn-danger btn-xs"><span class="glyphicon glyphicon-trash" aria-hidden="true"></span></a>
+                            </td>
+
                         </tr>
                         <% }) %>
                     </table>
@@ -103,5 +112,14 @@
 <!-- /.container -->
 <script src="/node_modules/jquery/dist/jquery.js"></script>
 <script src="/node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+
+
+<script>
+    function test(id) {
+        console.log(id);
+
+    }
+</script>
+
 </body>
 </html>
